# namaste-fhir

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  deps.py  main.py  middleware.py  security.py
app/db/: models.py  session.py
app/fhir/: endpoints.py
app/services/: icd11.py  ingest.py  search.py
data/: ayu-sat-table-a.xlsx  ayu-sat-table-b.xlsx  ayu-sat-table-c.xlsx  ayu-sat-table-d.xlsx  ayu-sat-table-f.xlsx  ayu-sat-table-g.xlsx  ayu-sat-table-h.xlsx  ayu-sat-table-i.xlsx  ayu-sat-table-j.xlsx
docker/: docker-compose.yml
docs/: DOCS.md
java/: README.md
java/src/: MatrixChainMultiplication.java  MatrixChainTest.java
migrations/: README
scripts/: ingest_local_data.py
