[tool.poetry]
name = "namaste-fhir"
version = "0.1.0"
description = "FHIR R4 terminology microservice for NAMASTE and ICD-11 TM2 integration"
authors = ["Ctrl Z udhayxd@gmail.com"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.114.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic-settings = "^2.4.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
SQLAlchemy = "^2.0.34"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
redis = "^5.0.8"
elasticsearch = ">=7.17.0,<8.0.0"
httpx = "^0.27.2"
"fhir.resources" = "^7.0.2"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
orjson = "^3.10.7"
python-json-logger = "^2.0.7"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
